--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -81,6 +81,8 @@ hr {
     margin-left: auto;
     margin-right: auto;
     width: 80vw;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 body {
@@ -155,6 +157,12 @@ header {
     padding-bottom: 1em;
 }
 
+.tophr {
+    position: absolute;
+    bottom: 0;
+    left: 10vw;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -166,7 +174,7 @@ li {
 }
 
 main {
-    min-height: 59vh;
+    min-height: 54vh;
     width: 80vw;
     overflow: auto;
     margin: auto;
@@ -229,7 +237,25 @@ input {
     padding: 0.2em;
 }
 
-input[type="text"], input[type="password"] {
+textarea {
+    background-color: #c9cacc;
+    color: black;
+    margin-top: .5em;
+    margin-bottom: .5em;
+    border-radius: .15em;
+    padding: 0.2em;
+    width: 34em;
+    word-wrap: break-word;
+    overflow: visible;
+}
+
+#the-count {
+    float: right;
+    padding: 0.1rem 0 0 0;
+    font-size: 0.875rem;
+}
+
+input[type="text"], input[type="password"], textarea {
     cursor: text;
 }
 
@@ -253,6 +279,42 @@ input[type="submit"] {
     margin-left: 0;
     border-radius: .25em;
     cursor: pointer;
+}
+
+.left {
+    width: 40vw;
+    height: 100%;
+    float: left;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.right {
+    width: 40vw;
+    height: 100%;
+    float: right;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.leftfull {
+    width: 40vw;
+    height: 54vh;
+    float: left;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.rightfull {
+    width: 40vw;
+    height: 54vh;
+    float: right;
 }
 
 /* CSS Media crap */
