--- a/app/templates/editdb.html
+++ b/app/templates/editdb.html
@@ -11,6 +11,8 @@
                 </div>
             {% endif %}
             {% endwith %}
+            <label for="password">Admin password:</label>
+            <input type="password" name="password" id ="password"><br>
             <label for="username">Username:</label><br>
             <input type="text" id="username" name="username"><br>
             <select id="column" name="column">
