--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -18,6 +18,7 @@
         <input type="text" id="username" name="username" onkeyup="return forceLower(this);" required><br>
         <label for="password">Password<span style="color: red;">*</span></label><br>
         <input type="password" id="password" name="password" required><br>
+        <input type="password2" id="password2" name="password" required><br>
         <p style="font-size: 0.85em;"><span style="color: red;">*</span>Required fields</p>
         <input type="submit" value="Submit">
     </form><br>
