--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -18,9 +18,10 @@
         <input type="text" id="username" name="username" onkeyup="return forceLower(this);" required><br>
         <label for="password">Password<span style="color: red;">*</span></label><br>
         <input type="password" id="password" name="password" required><br>
-        <input type="password2" id="password2" name="password" required><br>
+        <label for="password2">Repeat password<span style="color: red;">*</label>
+        <input type="password" id="password2" name="password2" required><br>
         <p style="font-size: 0.85em;"><span style="color: red;">*</span>Required fields</p>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" onSubmit="return validate();">
     </form><br>
     <p><a href="{{ url_for('auth.login') }}">Log in</a></p>
 </div>
