--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -11,7 +11,7 @@
 <h2>My top 3 projects</h2>
             <ul>
                 <li>
-                    <a class="nounderline" href="https://github.com/WaldemarBjornstrom/SEsocial" title="SE-Social"><h3>1. SE-Social</h3></a>
+                    <a class="nounderline" href="/projects/SE-Social" title="SE-Social"><h3>1. SE-Social</h3></a>
                     <p>
                         An open-source project made to generate and verify swedish social security numbers. In Swedish: "Personnummer".
                         Still has some bugs, but i'm planning on fixing everything, making a flask web app, and maybe a windows application as well.
