--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,6 +50,12 @@
                         <p>Website</p>
                     </a>
                 </div>
+                <div id="link">
+                    <a href="https://twitter.com/WaldemarBjrnst3">
+                        <img id="icon" alt="Twitter Logo" src="{{ url_for('static',filename='img/tw32px.png') }}">
+                        <p>Twitter</p>
+                    </a>
+                </div>
             </div>
         </footer>
     </body>
