--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,12 +21,8 @@
 <h2>Hello! Thank you for visiting my site!</h2>
             <p>
                 This has been a little project of mine, in lack of other things to do.
-                I'm sorry that this page maybe doesn't look as good as it could, But web 
-                development is not really my thing. But if you have any issues and/or ideas, 
-                feel free to create an issue on my github! That's right! Everything i do, is open source.
-                I know a bit of web dev and programming, but what i really do, if i can, is 
-                more in the direction of network and server management. Feel free to contact 
-                me if you want to, not that i know why you would, bit still. Do so if you want.
-                How? That's up tp you to find out.
+                My name is Waldemar, as you might se on the domain name. I do stuff like this sometimes, 
+                so feel free to check my other stuff out in the projects tab! Otherwise, feel free to check me  
+                out on <a href="https://twitter.com/WaldemarBjrnst3">Twitter</a> or <a href="https://github.com/WaldemarBjornstrom">Github</a>.
             </p>
 {% endblock %}
