--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -1,3 +1,5 @@
+/* Language: CSS */
+
 /* Manually add google fonts, to reduce critical requests chin */
 /* cyrillic-ext */
 @font-face {
@@ -207,8 +209,8 @@ footer {
 #icon {
     height: 5vh;
     width: 5vh;
-    max-width: 32px;
-    max-height: 32px;
+    height:32px;
+    object-fit: cover;
 }
 
 .formcontainer {
