--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,7 @@
             <div class="titlediv">
                 <h1 title="Waldemar.tk">Waldemar.tk</h1>
             </div>
+            <script defer type="text/javascript" charset="UTF-8" src="{{ url_for('static',filename='javascript/popup.js') }}"></script>
             <nav class="nav">
                 <ul id="navlist">
                     <li><a href='/'>Home</a></li>
