--- a/app/templates/projects/index.html
+++ b/app/templates/projects/index.html
@@ -15,7 +15,7 @@
                     <p>
                         An open-source project made to generate and verify swedish social security numbers. In Swedish: "Personnummer".
                         Still has some bugs, but i'm planning on fixing everything.<br><br>
-                        <h4 style="font-weight: bold;">This is now available on this site!</h4>
+                        <h4 style="font-weight: bold; color: #fff">This is now available on this site!</h4>
                         Click the heading to try it out! More features coming soon.
                     </p>
                 </li><br>
