--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -18,7 +18,7 @@
         {{ role|safe }}
     </div>
     <div class="rightfull">
-        <p style="white-space: pre-wrap;">{{ about }}</p>
+        <p style="white-space: pre-wrap;">{{ about|safe }}</p>
         {{ usermenu|safe }}
     </div>
 </div>
