--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,10 @@
         <script type="text/javascript" charset="UTF-8" src="{{ url_for('static',filename='javascript/func.js') }}"></script>
         <link rel="stylesheet" type="text/css" charset="UTF-8" href="{{ url_for('static',filename='styles/style.css') }}">
         <link rel="stylesheet" type="text/css" charset="UTF-8" href="{{ url_for('static',filename='styles/reset.css') }}">
+        <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static',filename='img/favicon/apple-touch-icon.png') }}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static',filename='img/favicon/favicon-32x32.png') }}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static',filename='img/favicon/favicon-16x16.png') }}">
+        <link rel="manifest" href="{{ url_for('static',filename='img/favicon/site.webmanifest') }}">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {% block head %}
