Updated favorite projects and fixed functionality as of TODO list.

--- a/app/templates/projects/index.html
+++ b/app/templates/projects/index.html
@@ -11,7 +11,13 @@
 <h2>My top 3 projects</h2>
             <ul>
                 <li>
-                    <a href="/projects/SE-Social" title="SE-Social"><h3>1. SE-Social</h3></a>
+                    <a class="nounderline" href="https://github.com/WaldemarBjornstrom/Waldemar.tk" title="Waldemar.tk Website"><h3>1. Waldemar.tk</h3></a>
+                    <p>
+                        This website!
+                    </p>
+                </li><br>
+                <li>
+                    <a href="/projects/SE-Social" title="SE-Social"><h3>2. SE-Social</h3></a>
                     <p>
                         An open-source project made to generate and verify swedish social security numbers. In Swedish: "Personnummer".
                         Still has some bugs, but i'm planning on fixing everything.<br><br>
@@ -20,17 +26,10 @@
                     </p>
                 </li><br>
                 <li>
-                    <a class="nounderline" href="https://github.com/WaldemarBjornstrom/docx_search" title="DOCX-Search"><h3>2. DOCX-Search</h3></a>
+                    <a class="nounderline" href="https://github.com/WaldemarBjornstrom/docx_search" title="DOCX-Search"><h3>3. DOCX-Search</h3></a>
                     <p>
                         A python library to search for keywords in .docx files. There's probably a better way, buuut, i don't care.
                         I'm planning on writing a python web app for document handling. But we'll see.
-                    </p>
-                </li><br>
-                <li>
-                    <a class="nounderline" href="https://github.com/WaldemarBjornstrom/unf_norrbotten_buildout" title="UNF_Norrbotten_Buildout"><h3>3. UNF_Norrbotten_Buildout</h3></a>
-                    <p>
-                        A working buildout of the program Vote-IT. A friend and I had kinda' a competition of who could get it up and running.
-                        (Apparantly the developers hardly can...) Guess who won?? Go check it out at <a href="https://voteit.waldemar.tk">voteit.waldemar.tk</a>!
                     </p>
                 </li><br>
             </ul>
