--- a/app/templates/projects/SE-social.html
+++ b/app/templates/projects/SE-social.html
@@ -79,11 +79,11 @@
                 element.appendChild(document.createTextNode(json));
                 element.style.cssText = 'padding: .25em; margin-bottom: 1em; border-style: none none none solid; border-width: medium; border-color: green; background-color: rgba(0, 255, 0, 0.2)'
                 document.getElementById('GenerateForm').prepend(element);  
-                // Remove flash element after 2 seconds
+                // Remove flash element after 5 seconds
                 setTimeout(function() {
                     document.getElementById('flash').remove()
                     console.log('Flash removed')
-                }, 2000);
+                }, 5000);
             }).catch(function (error) {
                 console.error(error);
                 if (document.getElementById('flash')) {document.getElementById('flash').remove()}
@@ -119,7 +119,7 @@
         </div>
     </div>
     <div class="column">
-        <h3>Generateee</h3>
+        <h3>Generate</h3>
         <br>
         <div class="formcontainer">
             <form method="POST" action="/api/sesocial" class="form" id="GenerateForm">
