--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -28,6 +28,6 @@
         <label for="checkbox">Remember me</label><br>
         <input type="submit" value="Submit">
     </form><br>
-    <p><a href="{{ url_for('auth.signup') }}">Register account</a> | <a href="{{ url_for('auth.forgot') }}">Forgot login?</a></p>
+    <p style="padding-top: 10px;"><a href="{{ url_for('auth.signup') }}">Register account</a> | <a href="{{ url_for('auth.forgot') }}">Forgot login?</a></p>
 </div>
 {% endblock %}
